# django-keycloak-auth

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README_internal.md  pyproject.toml  setup.cfg  setup.py
.github/: python-publish.yml
.github/workflows/: issues-prs-inactivity.yml  main.yml  test.yml
django_keycloak/: __init__.py  admin.py  apps.py  authentication.py  backends.py  config.py  connector.py  decorators.py  enums.py  errors.py  keycloak.py  managers.py  middleware.py  mixins.py  models.py  tasks.py  token.py  urls.py
django_keycloak/api/: serializers.py  urls.py  views.py
django_keycloak/management/commands/: sync_keycloak_users.py
django_keycloak/migrations/: 0001_initial.py  0001_redo_migrations_0001to0005.py  0001_squashed_0005_auto_20211231_1702.py  0002_auto_20210209_1503.py  0003_auto_20210406_1426.py  0004_keycloakuserautoid.py  0005_auto_20211231_1702.py
src/: boot_django.py  makemigrations.py
src/django_keycloak/: __init__.py  admin.py  apps.py  authentication.py  backends.py  config.py  connector.py  decorators.py  errors.py  keycloak.py  managers.py  middleware.py  mixins.py  models.py  tasks.py  token.py
src/django_keycloak/api/: filters.py  serializers.py  views.py
src/django_keycloak/management/commands/: sync_keycloak_users.py
src/django_keycloak/migrations/: 0001_initial.py  0001_redo_migrations_0001to0005.py  0002_alter_keycloakuser_username_and_more.py  0002_auto_20210209_1503.py  0003_auto_20210406_1426.py  0004_keycloakuserautoid.py  0005_auto_20211231_1702.py
tests/: .coveragerc  realm-export-13-14.json  realm-export.json  start.sh
tests/test_site/: manage.py
tests/test_site/test_app/: apps.py  urls.py  views.py
tests/test_site/test_app/tests/: test_init.py  test_middleware.py
tests/test_site/test_site/: asgi.py  settings.py  urls.py  wsgi.py
