[metadata]
name = django_uw_keycloak
version = 0.8.7
description = Middleware to allow authorization using Keycloak and Django
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = 
author = Ubiwhere
author_email = urbanplatform@ubiwhere.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Topic :: Security

[options]
include_package_data = true
packages = find:
install_requires =
    Django >= "2.2"

