[metadata]
name = django_uw_keycloak
version = 1.1
description = Middleware to allow authorization using Keycloak and Django
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/urbanplatform/django-keycloak-auth 
author = Ubiwhere
author_email = urbanplatform@ubiwhere.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Topic :: Security

[options]
include_package_data = true
packages = find:
install_requires =
    Django >= "2.2"
    djangorestframework >= "3.0"
    dry-rest-permissions >= "0.1"
    PyJWT >= "2.3"
    requests >= "2.0"
    cachetools >= "5.0"

